--- a/CSS/Exercises/Exercise_13/index.html
+++ b/CSS/Exercises/Exercise_13/index.html
@@ -2,13 +2,17 @@
 <html>
 <head>
 	<title>Home</title>
+	<link href="style.css" rel="stylesheet" />
 </head>
 <body>
 	<header>
 		<h1>Home</h1>
+		<nav>
+			<a class="current_link" href="index.html">Home</a> <a href="about.html">About</a> <a href="news.html">News</a>
+		</nav>
 	</header>
-	<nav>
-		<a href="index.html">Home</a> <a href="about.html">About</a> <a href="news.html">News</a>
-	</nav>
+	<p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ad sunt dolore cum. Ab, voluptatem. Quis modi nemo rerum sed eaque sunt quaerat quidem, rem placeat impedit a quia tempore qui.</p>
+	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Blanditiis provident suscipit quia itaque neque ad delectus! Ab quaerat similique, distinctio tenetur illum eos molestias. Suscipit aspernatur pariatur nisi accusantium maxime.</p>
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum eaque adipisci non at voluptate, nemo ad voluptatum? Voluptatem placeat natus unde cumque sint consectetur culpa repellendus architecto iste quis? Facilis?</p>
 </body>
 </html>
